FR_1127_Integration_with_new_PRD_API
 - initial draft version for /v1/organisations/pba implementation